tests/transpiler/x/scala/min_max_builtin.scala
// Generated by Mochi v0.10.31 on 2025-07-20 09:06:56 GMT+7
object Main {
  def main(args: Array[String]): Unit = {
    val nums: List[Int] = List(3, 1, 4)
    println(min(nums))
    println(max(nums))
  }
}
